--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -26,7 +26,8 @@ code,
 input,
 textarea,
 select,
-button {
+button,
+div {
   @apply font-body;
 }
 
@@ -109,6 +110,7 @@ button {
   --sidebar-accent-foreground: oklch(0.21 0.034 264.665);
   --sidebar-border: oklch(0.928 0.006 264.531);
   --sidebar-ring: oklch(0.707 0.022 261.325);
+  --spacing: 3.5px;
 }
 
 .dark {
