--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -39,9 +39,9 @@ a:hover {
   color: var(--color-ring)
 }
 
-a.link-remove:hover {
+/* a.link-remove:hover {
   color: inherit;
-}
+} */
 
 @custom-variant dark (&:is(.dark *));
 
